...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Timeline RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_timeline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="88dp"
                tools:listitem="@layout/item_timeline_entry" />

...
